@@ -1,3 +1,9 @@
+2008-09-10  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/37420
+	* gfortran.dg/warn_unused_var.f90: New test.
+	* gfortran.dg/warn_unused_var.f90: Add cleanup-modules.
+
 2008-09-10  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/37353
